# ai-drama-cli

./: .gitignore  README.md  comfyui_anime_test_prompt.json  demo_script.json  drama.bat  pyproject.toml  requirements.txt  setup.py  test_comfyui_blueprint.json  test_comfyui_plugins.json
ai_anime_drama_demo/: HANDOFF.md  comfy_scene_01.json  comfy_scene_02.json  comfy_scene_03.json  concat_images.txt  prompt_ids.txt  queue_scenes.ps1  render_motion.ps1  story.json  subtitles.srt
drama_cli/: __init__.py  ai_client.py  anime.py  comfyui.py  config.py  main.py  project.py  script_gen.py  tts_engine.py  video_gen.py
drama_cli/douyin/: __init__.py  ai_video.py  bgm_engine.py  image_gen.py  pipeline.py  templates.py  video_effects.py  viral.py  web_server.py
