# DramaCLI - AI 短剧自动生成工具

[project]
name = "drama-cli"
version = "1.0.0"
description = "🎬 AI 短剧自动生成 CLI 工具 - 一键生成剧本、语音、视频"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DramaCLI Team"}
]
readme = "README.md"

dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "openai>=1.0.0",
    "edge-tts>=6.1.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
drama = "drama_cli.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["drama_cli*"]